@@ -51,6 +51,7 @@
 * \def KVI_FILTER_SCRIPTS Script files *.kvs *.kva
 * \def KVI_FILTER_INI Ini file *.ini
 * \def KVI_FILTER_IMAGE Image file *.png *.jpg *.jpeg *.bmp *.gif *.xpm
+* \def KVI_FILTER_UI User interface file *.ui
 */
 #define KVI_FILTER_CONFIG "KVIrc Config (*.kvc)"
 #define KVI_FILTER_SCRIPT "KVIrc Script (*.kvs)"
@@ -60,5 +61,6 @@
 #define KVI_FILTER_SCRIPTS "KVIrc Script and Addon (*.kvs *.kva)"
 #define KVI_FILTER_INI "INI File (*.ini)"
 #define KVI_FILTER_IMAGE "Image File (*.png *.jpg *.jpeg *.bmp *.gif *.xpm)"
+#define KVI_FILTER_UI "User Interface File (*.ui)"
 
 #endif //_KVI_FILEEXTENSIONS_H_
