@@ -1,3 +1,8 @@
+05 September 2008
+   [HelLViS69]
+   - Added function $loadInterface() to load user inteface (*.ui) files to object
+     classes
+
 03 September 2008
    [HelLViS69]
    - New KVS command: added 'inject'
